# hyoml

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GLOSSARY.md  README.md  architecture.md  hyoml-rules.hyoml  setup.sh
docs/: architecture.md  overview.md  setup_and_contribution.md
javascript/: LICENSE  README.md  build.sh  jest.config.js  package.json  release.sh  run_examples.js  test.sh
javascript/docs/: CONTRIBUTING.md  README.md
javascript/examples/: cli_example.js  format_example.js  formatter_turtle.js  parse_example.js  (+5 more)
python/: pyproject.toml  requirements.txt  setup.py
python/cli/: main.py
python/enhanced_examples_with_tutorial/: GETTING_STARTED.md  README.md
python/enhanced_examples_with_tutorial/data/: indented_json_mode.hyoml  mixed_array.hyoml  sample.json  strict_input.hyoml  typed_values.hyoml
python/examples/: manipulation_example.py  revive_with_typing.py  sample.yml  tuples_and_dataclass.hyoml
python/formatters/: base.py  csv.py  env.py  html.py  ini.py  json.py  markdown.py  strictyml.py  toml.py  xml.py  yaml.py
python/interface/: hyoml.py
python/parser/config/: strict.hyoml
python/parser/core/: RelaxedJSON_with_tags.py  RelaxedYML_with_tags.py  config_loader.py  factory.py  hyoml_parser.py
python/parser/core/middleware/: autofixer.py  reviver.py
python/parser/core/visitors/: date_visitor.py  directive_visitor.py  visitor_loader.py
python/strict_profiles/: balanced.hyoml  relaxed.hyoml  strict.hyoml
python/tests/: test_autofixer.py  test_formatters.py  test_parser.py
python/utils/: file_utils.py  validator.py
(+106 files in other folders)
