[project]
name = "hyoml"
version = "0.0.1"
description = "Hyoml - Hybrid Object Markup Language parser and formatter"
authors = [
    { name = "Ahmed Daif", email = "prog.ahmeddaif@gmail.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"

dependencies = [
    "beautifulsoup4>=4.12.2",
    "rdflib>=6.3.2",
    "requests>=2.31.0"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["python"]
